challenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  rules:
  - host: app.prova
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service:
            name: simpleapp
            port: 
              number: 8080
  - host: kibana.prova
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service:
            name: kibana
            port: 
              number: 8080
